# lakehouse-iot-telemetry-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: local.yaml  prod.yaml
data/generator/: __init__.py  generate_telemetry.py
docs/: ARCHITECTURE.md  COST_ANALYSIS.md  LOCAL_DEVELOPMENT.md  PERFORMANCE.md  RUNBOOK.md
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/envs/: backend-dev.hcl.example  dev.tfvars.example
infra/terraform/modules/databricks/: main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
notebooks/: 01_bronze_exploration.py  02_silver_dq_dashboard.py  03_gold_kpi_exploration.py  04_optimize_and_vacuum.py  99_smoke_test.py
resources/: jobs.yml  pipelines.yml
scripts/: backfill.py  deploy.sh
src/: __init__.py  cli.py
src/bronze/: __init__.py  ingest_telemetry.py
src/data_quality/: __init__.py  rules.py
src/dlt/: __init__.py  bronze_ingest_dlt.py  gold_aggregate_dlt.py  silver_transform_dlt.py
src/gold/: __init__.py  aggregate_kpis.py
src/schemas/: __init__.py  telemetry.py
src/silver/: __init__.py  scd2_device_dim.py  transform_telemetry.py
src/utils/: __init__.py  config_loader.py  idempotency.py  logging_config.py  spark_session.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_dq_rules.py  test_gold_aggregations.py  test_silver_transform.py  test_utils.py
