[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-iot-telemetry-pipeline"
version = "1.0.0"
description = "Multi-tenant IoT telemetry Lakehouse on Databricks + Delta Lake"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Sushma K L", email = "sushmakl95@gmail.com" },
]
keywords = ["databricks", "delta-lake", "pyspark", "lakehouse", "iot", "data-engineering"]

dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "click>=8.1.7",
    "faker>=24.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-spark>=0.6.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "bandit>=1.7.8",
    "detect-secrets>=1.5.0",
    "pre-commit>=3.7.0",
    "chispa>=0.10.1",
]
databricks = [
    "databricks-sdk>=0.24.0",
    "databricks-cli>=0.18.0",
]

[project.scripts]
iot-pipeline = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["notebooks/*", "data/*"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # bandit security
    "RUF",  # ruff-specific
]
# PySpark idioms conflict with some default rules — ignore intentionally.
ignore = [
    "S101",    # allow assert (used in tests)
    "E501",    # allow long lines (mostly in SQL strings and docstrings)
    "N812",    # `from pyspark.sql import functions as F` is standard PySpark convention
    "S608",    # SQL "injection" warnings on f-string table names — these are identifiers, not user input
    "RUF022",  # don't force `__all__` sorting (grouping by semantics is more readable)
    "UP042",   # StrEnum requires Python 3.11+ but mixing with Enum is widely used for compat
    "B008",    # allow function calls in argument defaults (Click/FastAPI style)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "RUF059"]      # tests may have tuple-unpacking with unused elements
"src/dlt/*" = ["F821", "I001"]   # dlt decorators access global `spark`; imports are DLT-specific
"scripts/*" = ["S603", "S607"]   # scripts legitimately invoke subprocesses

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# Don't type-check DLT files — `dlt` is only available on Databricks runtime
exclude = ["src/dlt/", "tests/", "notebooks/", "data/generator/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests requiring spark + delta",
    "slow: tests that take >5s",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*", "*/notebooks/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
