[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-iot-telemetry-pipeline"
version = "1.0.0"
description = "Multi-tenant IoT telemetry Lakehouse on Databricks + Delta Lake"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Sushma K L", email = "sushmakl95@gmail.com" },
]
keywords = ["databricks", "delta-lake", "pyspark", "lakehouse", "iot", "data-engineering"]

dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "click>=8.1.7",
    "faker>=24.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "bandit>=1.7.8",
    "detect-secrets>=1.5.0",
    "pre-commit>=3.7.0",
    "chispa>=0.10.1",
    "types-PyYAML",
]
databricks = [
    "databricks-sdk>=0.24.0",
    "databricks-cli>=0.18.0",
]

[project.scripts]
iot-pipeline = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# --------------------------------------------------------------------------
# Ruff: linter + formatter
# Philosophy: enforce *real* issues only. PySpark idioms and DLT quirks
# are explicitly excluded rather than patched with per-line `noqa` directives.
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 110
target-version = "py311"
# DLT files reference a runtime-injected `spark` global that confuses linters.
# They also have decorators that rearrange import expectations. Excluding them
# from lint is standard practice in Databricks projects.
extend-exclude = [
    "notebooks/*",
    "data/generator/*",
    "src/dlt/*",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]
# Rules intentionally disabled — each with a reason:
ignore = [
    "E501",    # long lines — unavoidable in SQL strings and docstrings
    "N812",    # `from pyspark.sql import functions as F` is the PySpark standard
    "S608",    # SQL "injection" false positives on internal table identifiers
    "RUF022",  # alphabetical __all__ sorting; semantic grouping is more readable
    "UP042",   # StrEnum differs subtly from (str, Enum); prefer backward compat
    "B008",    # function calls in defaults (common in Click/FastAPI code)
    "RUF012",  # mutable class attrs (common in dataclass defaults)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "RUF059", "B"]      # tests may use asserts, unpacking, fixtures
"scripts/*" = ["S603", "S607"]        # scripts legitimately invoke subprocesses
"**/__init__.py" = ["F401"]           # re-exports are intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = false

# --------------------------------------------------------------------------
# mypy
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# DLT is only available on Databricks runtime; tests use fixtures that mypy misreads.
exclude = [
    "src/dlt/",
    "tests/",
    "notebooks/",
    "data/generator/",
    "scripts/",
]

# --------------------------------------------------------------------------
# pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests requiring spark + delta",
    "slow: tests that take >5s",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*", "*/notebooks/*", "*/dlt/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

# --------------------------------------------------------------------------
# bandit
# --------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "src/dlt", "notebooks"]
skips = ["B101", "B608"]  # assert (tests), SQL identifier f-strings
